fix styling issue on save button on firefox

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -329,7 +329,7 @@ p {
 
 .actions {
   input {
-    padding: $space;
+    height: $space-big;
     width: 50%;
   }
 }
