--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -21,5 +21,4 @@ $line-height-lead:           24px/$base-font-size + rem;
 $line-height-p:              24px/$base-font-size + rem;
 
 $space:                      16px/$base-font-size + rem;
-
-
+$space-big:                  32px/$base-font-size + rem;
